--- a/angular-formatting-test/src/app/mobile-page/mobile-page.component.html
+++ b/angular-formatting-test/src/app/mobile-page/mobile-page.component.html
@@ -7,7 +7,7 @@
 
 <body>
 
-    <section id="intro" class="bg-light">
+    <!-- <section id="intro" class="bg-light">
         <div class="container">
             <div class="heading-block">
                 <h1>New Mobile App</h1>
@@ -18,7 +18,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <section class="bg-dark">
         <div class="container">
