--- a/angular-formatting-test/src/app/mobile-page/mobile-page.component.html
+++ b/angular-formatting-test/src/app/mobile-page/mobile-page.component.html
@@ -44,7 +44,7 @@
 
     
 
-    <section class="bg-dark divider">
+    <!-- <section class="bg-dark divider">
         <div class="container">
             <div class="heading-block">
                 <h3 class="text-light">Sign up now to get a discount</h3>
@@ -69,10 +69,11 @@
                     <div class="col-md-3">
                         <button type="submit" class="primary-btn">Sign up</button>
                     </div>
-                </div><!-- End row -->
+                </div>
+     
             </form>
         </div>
-    </section>
+    </section> -->
 
     <section id="footer" class="bg-dark">
         <div class="container text-center">
